--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,3 +29,19 @@
     </main>
   </body>
 </html>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+
+<script>
+const gitment = new Gitment({
+    id: '{{ substr (replaceRE "([ ])" "" .Title) 0 49  }}',
+    owner: 'CapnSammeh',
+    repo: 'CapnSammeh-Blog',
+    oauth: {
+        client_id: 'e08e6dd71593d3f99242',
+        client_secret: '0d09e22a89f1c220681d1b3452dc3dcf873268ae'
+    }
+});
+
+gitment.render(document.getElementById('gitment-comments'));
+</script>
