Updated GitMent Styles to be in a better location

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
   </body>
 </html>
  <script src="https://cdn.jsdelivr.net/gh/theme-next/theme-next-gitment@1/gitment.browser.js"></script>
- <link rel="stylesheet" href="resources\_gen\assets\scss\css\gitmentstyle.css"/> 
+ <link rel="stylesheet" href="assets/css/gitmentstyle.css"/>
 
 <script>
 const gitment = new Gitment({
